# Lab

./: CMakeLists.txt  bresenhams_circleDraw  bresenhams_circleDraw.cpp
Lab Final/: filling.cpp  obstacle  obstacle.cpp  polygone_algo  threeDimTrans.cpp
LabTest/: breshCircle  breshCircle.cpp  dda_test  dda_test.cpp
LabTest/2D_translation/: translate  translate.cpp
class_1/: basic  basic.cpp  tempCodeRunnerFile
class_2/: BresenhamAlgorithm  BresenhamAlgorithm.cpp  DDA.cpp  dda
class_3/: BreshenshamLineDraw  BreshenshamLineDraw.cpp  bresenham_circle  bresenham_circle.cpp  midpoint_circledraw  moving_translation  moving_translation.cpp  quiz.txt  rotation  rotation.cpp  scalling  scalling.cpp
practice/: bresh_line  bresh_line.cpp  dda  dda_v2  dda_v2.cpp  midpoint_circle  midpoint_circle.cpp  rotation  rotation.cpp
